--- a/PolyDictionary/Other/Localizable.xcstrings
+++ b/PolyDictionary/Other/Localizable.xcstrings
@@ -573,7 +573,14 @@
       }
     },
     "Search" : {
-
+      "localizations" : {
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Поиск"
+          }
+        }
+      }
     },
     "Search Languages" : {
       "localizations" : {
