More words data

--- a/PolyDictionary/Other/Localizable.xcstrings
+++ b/PolyDictionary/Other/Localizable.xcstrings
@@ -146,6 +146,9 @@
         }
       }
     },
+    "Are you sure you want to delete this word?" : {
+
+    },
     "Available Tags" : {
       "localizations" : {
         "ru" : {
