--- a/PolyDictionary/Other/Localizable.xcstrings
+++ b/PolyDictionary/Other/Localizable.xcstrings
@@ -146,9 +146,6 @@
         }
       }
     },
-    "Are you sure you want to delete this word?" : {
-
-    },
     "Available Tags" : {
       "localizations" : {
         "ru" : {
@@ -322,6 +319,12 @@
           }
         }
       }
+    },
+    "Hello, World!" : {
+
+    },
+    "Hide from other dictionaries" : {
+
     },
     "Language" : {
       "localizations" : {
